# minitorch-module-2-arshdeepsch

./: README.md  main.py  pyproject.toml  requirements.extra.txt  sync_previous_module.py
minitorch/: __init__.py  autodiff.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py
project/: app.py  run_scalar.py  run_tensor.py
