[project]
name = "minitorch-module-2-arshdeepsch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.12.0",
    "altair<5",
    "colorama==0.4.3",
    "datasets==2.4.0",
    "embeddings==0.0.8",
    "flake8>=7.3.0",
    "hypothesis==6.54",
    "lark>=1.3.1",
    "mypy==0.971",
    "networkx==2.4",
    "numba==0.56",
    "numpy==1.22",
    "plotly==4.14.3",
    "pre-commit==2.20.0",
    "pydot==1.4.1",
    "pytest==7.1.2",
    "pytest-env>=0.6.2",
    "pytest-runner==5.2",
    "python-mnist>=0.7",
    "streamlit==1.12.0",
    "streamlit-ace>=0.1.1",
    "torch>=2.8.0",
    "typing-extensions>=4.15.0",
    "watchdog==1.0.2",
]
